--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="dummy_button">Login Button</string>
     <string name="dummy_content">LOGIN CONTENT</string>
     <string name="title_activity_horse_wallet">HorseWallet</string>
+    <string name="title_activity_calendar">Calendar</string>
 </resources>
